--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,9 +4,9 @@ $basic-white: #ffffff;
 $basic-black-opacity01: rgba(0, 0, 0, 0.1);
 $basic-white-opacity075: rgba(255, 255, 255, 0.75);
 
-$basic-content-dark: #1D1613;
-$basic-content-light: #9B9997;
-$accent-main: #A87B62;
+$basic-content-dark: #1d1613;
+$basic-content-light: #9b9997;
+$accent-main: #a87b62;
 $accent-bg: #563634;
 $accent-bg-light: #f0eae4;
 $accent-bg-opacity07: rgba(86, 64, 52, 0.7);
@@ -18,4 +18,3 @@ $popup-accent-bg: #f0eae4;
 $small-width: 767px;
 $medium-width: 1023px;
 $large-width-only: 1024px;
-
