--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,12 @@
 .catalog {
   display: grid;
-  grid-template-columns: 21.5% 73.8%;
-  gap: 4.7%
+  grid-template-columns: 250px 1fr;
+  gap: 4.2%;
+  padding-top: 80px;
+  margin-bottom: 40px;
+
+  @media (max-width: $medium-width) {
+    @include display-flex-wrap;
+    flex-direction: column;
+  }
 }
