--- a/source/sass/blocks/login.scss
+++ b/source/sass/blocks/login.scss
@@ -4,8 +4,8 @@
   padding-top: 138px;
   box-sizing: border-box;
   background-image: url("../img/login/login_large.jpg");
-  background: $popup-accent-bg;
-  box-shadow: 0px 5px 32px $popup-shadow;
+  background-color: $popup-accent-bg;
+  box-shadow: 0 5px 32px $popup-shadow;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/login/login_large@2x.jpg");
@@ -54,7 +54,7 @@
     }
   }
 
-@media (max-width: $small-width) {
+  @media (max-width: $small-width) {
     background-image: url("../img/login/login__small.jpg");
 
     @media (min-resolution: 2dppx) {
@@ -78,6 +78,7 @@
     }
   }
 }
+
 .login__wrapper {
   width: 100%;
   height: 100%;
