--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -49,7 +49,7 @@
 @media (max-width: $medium-width) {
   .search,
   .page-header--close .search {
-    display: none
+    display: none;
   }
 
   .search .nojs,
@@ -76,12 +76,11 @@
 
     &:hover {
       border: 2px solid $accent-bg-opacity07;
-      box-shadow: 0px 5px 10px 2px $accent-bg-opacity07;
+      box-shadow: 0 5px 10px 2px $accent-bg-opacity07;
     }
 
     &:focus {
       border: 2px solid $accent-bg;
     }
   }
-
 }
