--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -1,9 +1,9 @@
 @mixin poppins-font {
-  font-family: "Poppins", "Arial", "Helvetica" sans-serif;
+  font-family: "Poppins", "Arial", "Helvetica", sans-serif;
 }
 
 @mixin cormorantgaramond-font {
-  font-family: "Cormorant Garamond", "Garamond" , "Times New Roman", serif;
+  font-family: "Cormorant Garamond", "Garamond", "Times New Roman", serif;
 }
 
 @mixin reset-list {
