--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/catalog.scss";
 @import "blocks/faq.scss";
 @import "blocks/filters.scss";
+@import "blocks/filter.scss";
 @import "blocks/follow.scss";
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
@@ -20,6 +21,7 @@
 @import "blocks/nav-footer.scss";
 @import "blocks/novelty.scss";
 @import "blocks/page-header.scss";
+@import "blocks/pagination.scss";
 @import "blocks/popup.scss";
 @import "blocks/price.scss";
 @import "blocks/products.scss";
