--- a/source/sass/blocks/login.scss
+++ b/source/sass/blocks/login.scss
@@ -1,6 +1,7 @@
 .login {
+  position: relative;
   width: 430px;
-  height: 586px;
+  min-height: 586px;
   padding-top: 138px;
   box-sizing: border-box;
   background-image: url("../img/login/login_large.jpg");
@@ -38,42 +39,46 @@
     }
 
     .no-webp & {
-      background-image: url("../img/login/login__medium.jpg");
+      background-image: url("../img/login/login_medium.jpg");
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../img/login/login__medium@2x.jpg");
+        background-image: url("../img/login/login_medium@2x.jpg");
       }
     }
 
     .webp & {
-      background-image: url("../img/login/login__medium.webp");
+      background-image: url("../img/login/login_medium.webp");
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../img/login/login__medium@2x.webp");
+        background-image: url("../img/login/login_medium@2x.webp");
       }
     }
   }
 
   @media (max-width: $small-width) {
-    background-image: url("../img/login/login__small.jpg");
+    width: 270px;
+    min-height: 470px;
+    padding-top: 84px;
+    background-image: url("../img/login/login_small.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/login/login__small@2x.jpg");
+      background-image: url("../img/login/login_small@2x.jpg");
     }
+    background-size: 100% 84px;
 
     .no-webp & {
-      background-image: url("../img/login/login__small.jpg");
+      background-image: url("../img/login/login_small.jpg");
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../img/login/login__small@2x.jpg");
+        background-image: url("../img/login/login_small@2x.jpg");
       }
     }
 
     .webp & {
-      background-image: url("../img/login/login__small.webp");
+      background-image: url("../img/login/login_small.webp");
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../img/login/login__small@2x.webp");
+        background-image: url("../img/login/login_small@2x.webp");
       }
     }
   }
@@ -82,7 +87,145 @@
 .login__wrapper {
   width: 100%;
   height: 100%;
-  padding: 60px 45px;
+  padding: 50px 45px;
   box-sizing: border-box;
   overflow-y: auto;
+
+  @media (max-width: $small-width) {
+    padding: 36px 15px;
+  }
+}
+
+.login__close-button {
+  position: absolute;
+  top: 20px;
+  right: 14px;
+  cursor: pointer;
+  color: $basic-content-dark;
+  background-color: transparent;
+  border: none;
+  outline: none;
+
+  @media (max-width: $medium-width) {
+    right: 10px;
+    color: $basic-content-dark;
+
+    & svg {
+      width: 20px;
+      height: 20px;
+    }
+
+    @media (max-width: $small-width) {
+      top: 12px;
+
+      & svg {
+        width: 14px;
+        height: 14px;
+      }
+    }
+  }
+
+  &:hover,
+  &:focus {
+    color: $accent-bg;
+  }
+
+  &:active {
+    color: $accent-bg-opacity07;
+  }
+}
+
+.login h2 {
+  margin: 0 0 32px;
+
+  @include section-title;
+  text-transform: capitalize;
+
+  @media (max-width: $small-width) {
+    margin-bottom: 26px;
+    font-size: 24px;
+  }
+}
+
+.login fieldset {
+  @include display-flex-wrap;
+  flex-direction: column;
+  padding: 0;
+  border: none;
+}
+
+.login ul {
+  @include reset-list;
+  margin-bottom: 10px;
+
+  @media (max-width: $small-width) {
+    margin-bottom: 5px;
+  }
+}
+
+.login li {
+  margin-bottom: 34px;
+
+  @media (max-width: $small-width) {
+    margin-bottom: 29px;
+  }
+}
+
+.login input {
+  width: 100%;
+  padding-bottom: 10px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid $basic-content-dark;
+  outline: none;
+
+  &::placeholder {
+    @include poppins-font;
+    font-size: 14px;
+    line-height: 21px;
+    color: $basic-content-light;
+  }
+}
+
+.login label {
+  display: block;
+  width: fit-content;
+  margin: 0 0 0 auto;
+
+  & a {
+    @include poppins-font;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 18px;
+    color: $basic-content-light;
+    text-decoration: none;
+  }
+}
+
+.login button[type="submit"] {
+  margin-bottom: 15px;
+}
+
+.login__registration {
+  @include display-flex-wrap;
+  justify-content: center;
+}
+
+.login__registration p {
+  margin: 0 10px 0 0;
+
+  @include poppins-font;
+  vertical-align: middle;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  color: $basic-content-light;
+}
+
+.login__registration a {
+  vertical-align: middle;
+  font-size: 14px;
+  line-height: 21px;
+  color: $basic-content-light;
+  text-decoration: none;
 }
