--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -8,15 +8,11 @@
   @include reset-list;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, min(334px));
   gap: 40px 3.7%;
-  grid-auto-rows: 0;  // Удалить,
-  overflow-y: hidden; // после удаления последних элементов каталога
 }
 
 .products__item {
   width: 100%;
-  min-height: 334px;
   margin: 0;
   padding: 0;
 }
@@ -27,13 +23,16 @@
   text-decoration: none;
 }
 
-
 .products img {
   width: 100%;
   display: block;
   height: 272px;
   margin-bottom: 20px;
   object-fit: cover;
+
+  @media (max-width: $medium-width) {
+    height: 208px;
+  }
 }
 
 .products h3 {
