--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 //blocks
 @import "blocks/accordion.scss";
 @import "blocks/articles.scss";
+@import "blocks/buttons.scss";
 @import "blocks/carousel.scss";
 @import "blocks/catalog.scss";
 @import "blocks/faq.scss";
