--- a/source/sass/blocks/slick.scss
+++ b/source/sass/blocks/slick.scss
@@ -1,101 +1,119 @@
-/* stylelint-disable */
-/* Slider */
-
-.slick-slider {
-    position: relative;
-    display: block;
-    box-sizing: border-box;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -ms-touch-action: pan-y;
-    touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
-}
+/* Слайдер */
+.slick-slider  {}
+/* Слайдер запущен */
+.slick-slider.slick-initialized {}
+/* Слайдер с точками */
+.slick-slider.slick-dotted {}
+/* Ограничивающая оболочка */
 .slick-list {
+  overflow: hidden;
+
+}
+/* Лента слайдов */
+.slick-track {
+  display: flex;
+}
+/* Слайд */
+.slick-slide {
+
+}
+
+/* Слайд активный (показывается) */
+.slick-slide.slick-active {
+
+}
+
+/* Слайд основной */
+.slick-slide.slick-current {
+
+}
+
+/* Слайд по центру */
+.slick-slide.slick-center {
+
+}
+
+/* Клонированный слайд */
+.slick-slide.slick-cloned {
+
+}
+
+.slick-arrow {
+  position: absolute;
+  display: block;
+  height: 9px;
+  width: 29px;
+  padding: 0;
+  top: -105px;
+  border: none;
+  border-radius: 10%;
+  background-color: transparent;
+  color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  outline: none;
+
+  &.slick-prev {
+    left: 1.3%;
+    background-image: url("../img/icons/icon_arrow-slider-previous.svg");
+  }
+
+  &.slick-next {
+    right: 1%;
+    background-image: url("../img/icons/icon_arrow-slider-next.svg");
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $accent-bg-light;
+  }
+
+  &:active {
+    border: 1px solid $accent-bg;
+  }
+}
+
+/* Стрелка не активная */
+.slick-arrow.slick-disabled {
+  background-image: none;
+}
+/* Точки (булиты) */
+.slick-dots {
+  @include reset-list;
+  @include display-flex-wrap;
+  counter-reset: numli;
+}
+
+.slick-dots li{
+  @media (max-width: $small-width) {
     position: relative;
-    overflow: hidden;
-    display: block;
     margin: 0;
     padding: 0;
+    counter-increment: numli;
 
-    &:focus {
-        outline: none;
+    &:last-child::after {
+      position: absolute;
+      content: "of "counter(numli);
+      display: block;
+      width: max-content;
+      right: 0;
+      top: 0;
     }
-
-    &.dragging {
-        cursor: pointer;
-        cursor: hand;
-    }
-}
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+  }
 }
 
-.slick-track {
-    position: relative;
-    left: 0;
-    top: 0;
+.slick-dots button {
+  background-color: transparent;
+  border: none;
+}
+
+@media (max-width: $small-width) {
+  .slick-dots button {
+    display: none;
+  }
+
+  .slick-dots .slick-active button {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-
-    &:before,
-    &:after {
-        content: "";
-        display: table;
-    }
-
-    &:after {
-        clear: both;
-    }
-
-    .slick-loading & {
-        visibility: hidden;
-    }
-}
-.slick-slide {
-    float: left;
-    height: 100%;
-    min-height: 1px;
-    [dir="rtl"] & {
-        float: right;
-    }
-    img {
-        display: block;
-    }
-    &.slick-loading img {
-        display: none;
-    }
-
-    display: none;
-
-    &.dragging img {
-        pointer-events: none;
-    }
-
-    .slick-initialized & {
-        display: block;
-    }
-
-    .slick-loading & {
-        visibility: hidden;
-    }
-
-    .slick-vertical & {
-        display: block;
-        height: auto;
-        border: 1px solid transparent;
-    }
-}
-.slick-arrow.slick-hidden {
-    display: none;
+  }
 }
