--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -3,11 +3,16 @@
   grid-template-columns: 250px 1fr;
   gap: 4.2%;
   padding-top: 80px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 
   @media (max-width: $medium-width) {
     @include display-flex-wrap;
     flex-direction: column;
     padding-top: 50px;
+    margin-bottom: 10px;
+  }
+
+  @media (max-width: $small-width) {
+    padding-top: 40px;
   }
 }
