--- a/source/sass/blocks/nav-footer.scss
+++ b/source/sass/blocks/nav-footer.scss
@@ -6,7 +6,7 @@
 
   @media (max-width: $small-width) {
     width: 100%;
-    margin-bottom: 60px;
+    margin-bottom: 25px;
   }
 }
 
@@ -35,6 +35,12 @@
 
 .nav-footer li {
   width: 100%;
+
+  @media (max-width: $small-width) {
+    &:nth-child(4n+4) {
+      margin-bottom: 20px;
+    }
+  }
 }
 
 .nav-footer a {
@@ -43,4 +49,13 @@
   color: inherit;
   text-decoration: none;
   text-transform: capitalize;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 5px $basic-white;
+  }
+
+  &:active {
+    outline: 1px solid $basic-white;
+  }
 }
