--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -14,6 +14,12 @@
       margin-bottom: 22px;
     }
   }
+
+  @media (max-width: $small-width) {
+    &:not(:last-child) {
+      margin-right: 16px;
+    }
+  }
 }
 
 .social a {
@@ -24,11 +30,25 @@
   line-height: 1.3em;
   color: inherit;
   text-decoration: none;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 5px $basic-white;
+  }
+
+  &:active {
+    outline: 1px solid $basic-white;
+  }
 }
 
 .social svg {
   width: 15px;
   margin-right: 15px;
+
+  @media (max-width: $small-width) {
+    height: 20px;
+    width: auto;
+  }
 }
 
 .social span {
