--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -35,7 +35,7 @@
   cursor: pointer;
 
   &:hover,
-  &:focus {
+  &:focus-within {
     color: $accent-bg;
     background-color: $accent-bg-light;
   }
