--- a/source/sass/blocks/filters.scss
+++ b/source/sass/blocks/filters.scss
@@ -49,13 +49,22 @@
   }
 }
 
-.filters legend {
+.filters__toggle {
   margin: 0;
   padding: 0;
+
+  & button {
+    padding: 0;
+  }
 
   @media (max-width: $medium-width) {
     font-size: 18px;
     line-height: 1.3;
+
+    & svg {
+      width: 23px;
+      height: 12px;
+    }
   }
 }
 
@@ -132,16 +141,5 @@
   @media (max-width: $medium-width) {
     width: 85%;
     margin: 0 auto 0 21px;
-  }
-}
-
-.filters__toggle button {
-  padding: 0;
-}
-
-.filters__toggle svg {
-  @media (max-width: $medium-width) {
-    width: 23px;
-    height: 12px;
   }
 }
