--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,9 +1,3 @@
-.products {
-  @include display-flex-wrap;
-  flex-direction: column;
-  justify-content: center;
-}
-
 .products__list {
   @include reset-list;
   display: grid;
@@ -11,15 +5,25 @@
   gap: 9px 3.7%;
 
   @media (max-width: $small-width) {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 23px 10%;
+    @include display-flex-wrap;
+    gap: 0;
   }
 }
 
 .products__item {
-  width: 100%;
+  @include display-flex-wrap;
+  flex-direction: column;
   margin: 0;
   padding: 0;
+
+  @media (max-width: $small-width) {
+    width: 45%;
+    margin-bottom: 21px;
+
+    &:not(:nth-child(2n+2)) {
+      margin-right: 10%;
+    }
+  }
 
   &:hover,
   &:focus {
@@ -32,25 +36,22 @@
 }
 
 .products a {
+  display: block;
   width: 100%;
   color: inherit;
   text-decoration: none;
 }
 
 .products img {
-  width: 100%;
   display: block;
-  height: 272px;
+  width: 100%;
+  height: auto;
+  max-width: 272px;
+  max-height: 270px;
   margin-bottom: 22px;
-  object-fit: cover;
-
-  @media (max-width: $medium-width) {
-    height: 208px;
-  }
 
   @media (max-width: $small-width) {
-    height: 136px;
-    margin-bottom: 18px;
+    margin-bottom: 16px;
   }
 }
 
@@ -61,10 +62,6 @@
   font-size: 16px;
   line-height: 1.3em;
   letter-spacing: 0.03em;
-
-  @media (max-width: $small-width) {
-    margin-bottom: 1px;
-  }
 }
 
 .products span {
